--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
         "en": "Explain in *a few (10~15) words* the purpose of the app or what it actually does (it is meant to give a rough idea to users browsing a catalog of 100+ apps)",
         "fr": "Expliquez en *quelques* (10~15) mots l'utilité de l'app ou ce qu'elle fait (l'objectif est de donner une idée grossière pour des utilisateurs qui naviguent dans un catalogue de 100+ apps)"
     },
-    "version": "1.0~ynh1",
+    "version": "25.02.2021~ynh1",
     "url": "https://example.com",
     "upstream": {
         "license": "free",
@@ -18,8 +18,8 @@
     },
     "license": "free",
     "maintainer": {
-        "name": "John doe",
-        "email": "john.doe@example.com"
+        "name": "",
+        "email": ""
     },
     "requirements": {
         "yunohost": ">= 4.3.0"
