--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
         "website": "https://http://waterbear.info/",
         "demo": "https://demo.example.com",
         "admindoc": "https://yunohost.org/packaging_apps",
-        "userdoc": "https://yunohost.org/apps",
+        "userdoc": "https://indexmailwaterbear.wordpress.com/",
         "code": "https://some.forge.com/example/example"
     },
     "license": "free",
